--- a/TestProj/Editor/reload.yaml
+++ b/TestProj/Editor/reload.yaml
@@ -7,14 +7,14 @@ Objects:
             Name: soundAsset
             Type: Asset
             Value:
-              ID: 16624656892553940704
-              Type: Audio
+              ID: 0
+              Type: None
         - Field:
             Name: meshAsset
             Type: Asset
             Value:
-              ID: 10036008063945961451
-              Type: Mesh
+              ID: 0
+              Type: None
         - Field:
             Name: SomeBool
             Type: bool
@@ -22,28 +22,32 @@ Objects:
         - Field:
             Name: Signed8
             Type: int8
-            Value: 68
+            Value: 0
         - Field:
             Name: Unsigned32
             Type: uint32
-            Value: 85
+            Value: 0
         - Field:
             Name: Float
             Type: float
-            Value: 9.69999981
+            Value: 0
         - Field:
-            Name: Tilemap
+            Name: List
             Type: array
-            Value: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+            Value: []
         - Field:
-            Name: Width
-            Type: uint32
-            Value: 9
-        - Field:
-            Name: Height
-            Type: uint32
-            Value: 9
+            Name: Grid
+            Type: GridSet
+            Value:
+              Width: 5
+              Height: 5
+              Data:
+                - [1, 0, 0, 0, 0]
+                - [1, 1, 0, 0, 0]
+                - [1, 0, 1, 0, 0]
+                - [1, 0, 0, 1, 0]
+                - [1, 1, 1, 1, 1]
         - Field:
             Name: SomeVec3
             Type: Vec3
-            Value: [0, 0, 0]
+            Value: [29, 0, 0]
