--- a/.gitmodules
+++ b/.gitmodules
@@ -55,4 +55,4 @@
 	url = https://github.com/KhronosGroup/SPIRV-Cross.git
 [submodule "Magma/vendor/glslang"]
 	path = Magma/vendor/glslang
-	url = https://github.com/KhronosGroup/glslang.git
+	url = https://github.com/Jernesstar/glslang.git
