--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][DockSpaceWindow]
-Size=1604,881
+Pos=0,0
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,44
-Size=367,453
+Size=367,451
 Collapsed=0
 DockId=0x00000003,0
 
@@ -27,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=369,44
-Size=1235,630
+Size=1231,626
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -293,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,499
-Size=367,382
+Pos=0,497
+Size=367,380
 Collapsed=0
 DockId=0x00000004,0
 
@@ -311,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1351,676
-Size=253,205
+Pos=1348,672
+Size=252,205
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=369,676
-Size=980,205
+Pos=369,672
+Size=977,205
 Collapsed=0
 DockId=0x00000013,0
 
@@ -66253,7 +66254,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Pos=34,101 Size=1604,837 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000001 Parent=0xF15DEC6E SizeRef=367,832 Split=Y Selected=0x2E9237F7
     DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=218,548 Selected=0x2E9237F7
     DockNode          ID=0x00000004 Parent=0x00000001 SizeRef=218,462 Selected=0xF4B38336
