--- a/imgui.ini
+++ b/imgui.ini
@@ -22,13 +22,14 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=143,-150
+ViewportPos=307,37
+ViewportId=0xCBB8C2C5
 Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=369,44
-Size=1231,514
+Size=1231,605
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -312,8 +313,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1310,560
-Size=290,317
+Pos=1310,651
+Size=290,226
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +339,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=369,560
-Size=939,317
+Pos=369,651
+Size=939,226
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65344,7 +65345,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1604,628
+Size=1604,516
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -66252,6 +66253,10 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0x29C84F66,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
@@ -66265,10 +66270,10 @@ DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Spl
     DockNode          ID=0x00000012 Parent=0x00000002 SizeRef=1575,829 Split=X
       DockNode        ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,694 Split=X Selected=0xF6FF0623
+          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,605 Split=X Selected=0xF6FF0623
             DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
-          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,317 Split=X Selected=0xBF096F38
+          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,226 Split=X Selected=0xBF096F38
             DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=942,248 Selected=0xBF096F38
             DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=291,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
