--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1920,1057
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,44
-Size=369,549
+Size=279,451
 Collapsed=0
 DockId=0x00000003,0
 
@@ -22,14 +21,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-ViewportPos=307,37
-ViewportId=0xCBB8C2C5
+Pos=294,65
 Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=371,44
-Size=1549,775
+Pos=281,44
+Size=1319,595
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -295,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,595
-Size=369,462
+Pos=0,497
+Size=279,380
 Collapsed=0
 DockId=0x00000004,0
 
@@ -313,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1572,821
-Size=348,236
+Pos=1324,641
+Size=276,236
 Collapsed=0
 DockId=0x00000014,0
 
@@ -339,13 +337,13 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=371,821
-Size=1199,236
+Pos=281,641
+Size=1041,236
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Create Entity with MeshComponent]
-Pos=254,187
+Pos=381,258
 Size=430,158
 Collapsed=0
 
@@ -65345,7 +65343,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1604,516
+Size=1604,597
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65371,8 +65369,8 @@ Size=409,172
 Collapsed=0
 
 [Window][Select Asset]
-Pos=274,508
-Size=799,270
+Pos=8,672
+Size=40,45
 Collapsed=0
 
 [Window][Select Script]
@@ -66256,13 +66254,21 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0x1B857D09,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x99BC1B68,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1920,1013 Split=X Selected=0xBDDC88E0
-  DockNode            ID=0x00000001 Parent=0xF15DEC6E SizeRef=369,832 Split=Y Selected=0x2E9237F7
+DockSpace             ID=0xF15DEC6E Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
+  DockNode            ID=0x00000001 Parent=0xF15DEC6E SizeRef=279,832 Split=Y Selected=0x2E9237F7
     DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=218,548 Selected=0x2E9237F7
     DockNode          ID=0x00000004 Parent=0x00000001 SizeRef=218,462 Selected=0xF4B38336
-  DockNode            ID=0x00000002 Parent=0xF15DEC6E SizeRef=1549,832 Split=X
+  DockNode            ID=0x00000002 Parent=0xF15DEC6E SizeRef=1319,832 Split=X
     DockNode          ID=0x00000011 Parent=0x00000002 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
       DockNode        ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
       DockNode        ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -66273,8 +66279,8 @@ DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1920,1013 Sp
             DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
           DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,236 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1199,248 Selected=0xBF096F38
-            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=348,248 Selected=0x2323D3E4
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1041,248 Selected=0xBF096F38
+            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=276,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
       DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
