--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,44
-Size=284,444
+Size=284,540
 Collapsed=0
 DockId=0x00000003,0
 
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=286,44
-Size=1314,595
+Size=1634,775
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,490
-Size=284,387
+Pos=0,586
+Size=284,471
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1324,641
-Size=276,236
+Pos=1577,821
+Size=343,236
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=286,641
-Size=1036,236
+Pos=286,821
+Size=1289,236
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65392,7 +65392,12 @@ DockId=0x00000013,1
 
 [Window][GridSet Editor]
 Pos=762,345
-Size=271,340
+Size=250,299
+Collapsed=0
+
+[Window][New Material]
+Pos=899,487
+Size=122,83
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -66265,7 +66270,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1920,1013 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000001 Parent=0xF15DEC6E SizeRef=284,832 Split=Y Selected=0x2E9237F7
     DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=218,444 Selected=0x2E9237F7
     DockNode          ID=0x00000004 Parent=0x00000001 SizeRef=218,387 Selected=0xF4B38336
