--- a/imgui.ini
+++ b/imgui.ini
@@ -65400,6 +65400,11 @@ Pos=899,487
 Size=228,104
 Collapsed=0
 
+[Window][New Script]
+Pos=899,474
+Size=291,207
+Collapsed=0
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
