feat_begin: Script debugging

--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,44
-Size=296,444
+Size=258,444
 Collapsed=0
 DockId=0x00000003,0
 
@@ -27,10 +27,10 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=298,44
-Size=1302,639
+Pos=260,44
+Size=787,639
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000005,0
 
 [Window][##Window]
 Pos=100,100
@@ -295,7 +295,7 @@ Collapsed=0
 
 [Window][Component Editor]
 Pos=0,490
-Size=296,387
+Size=258,387
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1324,685
-Size=276,192
+Pos=1280,685
+Size=320,192
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,10 +324,10 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
-Pos=345,45
-Size=1265,762
+Pos=345,44
+Size=945,639
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000005,0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=298,685
-Size=1024,192
+Pos=260,685
+Size=1018,192
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65214,8 +65214,8 @@ Size=389,116
 Collapsed=0
 
 [Window][UI Hierarchy]
-Pos=0,45
-Size=343,1016
+Pos=0,44
+Size=343,833
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,8 +65225,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1612,45
-Size=308,762
+Pos=1292,44
+Size=308,639
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65344,15 +65344,15 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1600,797
+Size=1600,637
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000005,0
 
 [Window][##Welcome]
 Pos=0,46
 Size=1600,831
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000005,0
 
 [Window][Delete?]
 Pos=644,386
@@ -65385,10 +65385,10 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=371,821
-Size=1199,236
+Pos=1049,44
+Size=551,639
 Collapsed=0
-DockId=0x00000013,1
+DockId=0x00000006,0
 
 [Window][GridSet Editor]
 Pos=762,345
@@ -65404,6 +65404,18 @@ Collapsed=0
 Pos=899,474
 Size=291,207
 Collapsed=0
+
+[Window][Log]
+Pos=260,685
+Size=1018,192
+Collapsed=0
+DockId=0x00000013,1
+
+[Window][Console]
+Pos=260,685
+Size=1018,192
+Collapsed=0
+DockId=0x00000013,1
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -66285,25 +66297,35 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0x86C00A7F,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x19089F50,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
-  DockNode            ID=0x00000001 Parent=0xF15DEC6E SizeRef=296,832 Split=Y Selected=0x2E9237F7
-    DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=218,444 Selected=0x2E9237F7
-    DockNode          ID=0x00000004 Parent=0x00000001 SizeRef=218,387 Selected=0xF4B38336
-  DockNode            ID=0x00000002 Parent=0xF15DEC6E SizeRef=1302,832 Split=X
-    DockNode          ID=0x00000011 Parent=0x00000002 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
-      DockNode        ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
-      DockNode        ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-    DockNode          ID=0x00000012 Parent=0x00000002 SizeRef=1575,829 Split=X
-      DockNode        ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
-        DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,819 Split=X Selected=0xF6FF0623
-            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 Selected=0xBDDC88E0
-            DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
-          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,192 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1024,248 Selected=0xBF096F38
-            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=276,248 Selected=0x2323D3E4
-        DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
-      DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
+DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=258,832 Split=Y Selected=0x2E9237F7
+    DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,444 Selected=0x2E9237F7
+    DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,387 Selected=0xF4B38336
+  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1340,832 Split=X
+    DockNode            ID=0x00000011 Parent=0x00000002 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
+      DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
+      DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
+    DockNode            ID=0x00000012 Parent=0x00000002 SizeRef=1575,829 Split=X
+      DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
+        DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
+          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,639 Split=X Selected=0xF6FF0623
+            DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=945,575 Split=X Selected=0xBDDC88E0
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=787,639 CentralNode=1 Selected=0xBDDC88E0
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=551,639 Selected=0x2B33B8C9
+            DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
+          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,192 Split=X Selected=0xBF096F38
+            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=1018,192 Selected=0xBF096F38
+            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=320,192 Selected=0x2323D3E4
+        DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
+      DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
