fix: SPIRV loading was fine, Buffer<void> wasn't; progress: ScriptManager, ScriptEditorPanel

--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,44
-Size=258,444
+Size=328,444
 Collapsed=0
 DockId=0x00000003,0
 
@@ -27,8 +27,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=260,44
-Size=787,639
+Pos=330,44
+Size=1270,639
 Collapsed=0
 DockId=0x00000005,0
 
@@ -295,7 +295,7 @@ Collapsed=0
 
 [Window][Component Editor]
 Pos=0,490
-Size=258,387
+Size=328,387
 Collapsed=0
 DockId=0x00000004,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=260,685
-Size=1018,192
+Pos=330,685
+Size=948,192
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65385,8 +65385,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1049,44
-Size=551,639
+Pos=1152,44
+Size=448,639
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65412,8 +65412,8 @@ Collapsed=0
 DockId=0x00000013,1
 
 [Window][Console]
-Pos=260,685
-Size=1018,192
+Pos=330,685
+Size=948,192
 Collapsed=0
 DockId=0x00000013,1
 
@@ -66308,10 +66308,10 @@ Column 0  Sort=0v
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=258,832 Split=Y Selected=0x2E9237F7
+  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=328,832 Split=Y Selected=0x2E9237F7
     DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,444 Selected=0x2E9237F7
     DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,387 Selected=0xF4B38336
-  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1340,832 Split=X
+  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1270,832 Split=X
     DockNode            ID=0x00000011 Parent=0x00000002 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
       DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
       DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -66320,11 +66320,11 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 S
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,639 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=945,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=787,639 CentralNode=1 Selected=0xBDDC88E0
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=551,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=890,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=448,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
           DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,192 Split=X Selected=0xBF096F38
-            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=1018,192 Selected=0xBF096F38
+            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=948,192 Selected=0xBF096F38
             DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=320,192 Selected=0x2323D3E4
         DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
