todo: Multithreading in ProjectTab

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,4 @@
 [Window][DockSpaceWindow]
-Pos=0,0
 Size=1600,877
 Collapsed=0
 
@@ -28,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=330,44
-Size=717,598
+Size=768,647
 Collapsed=0
 DockId=0x00000005,0
 
@@ -221,7 +220,7 @@ Size=32,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=598,84
+Pos=765,120
 Size=549,680
 Collapsed=0
 
@@ -312,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1280,644
-Size=320,233
+Pos=1280,693
+Size=320,184
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=330,644
-Size=948,233
+Pos=330,693
+Size=948,184
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65315,7 +65314,7 @@ Size=473,247
 Collapsed=0
 
 [Window][Select Script Class]
-Pos=1,-149
+Pos=383,265
 Size=266,205
 Collapsed=0
 
@@ -65385,8 +65384,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1049,44
-Size=551,598
+Pos=1100,44
+Size=500,647
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65412,8 +65411,8 @@ Collapsed=0
 DockId=0x00000013,1
 
 [Window][Console]
-Pos=330,644
-Size=948,233
+Pos=330,693
+Size=948,184
 Collapsed=0
 DockId=0x00000013,1
 
@@ -66305,9 +66304,77 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=60
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x0919F5A2,14]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=19
+Column 2  Width=19
+Column 3  Width=19
+Column 4  Width=19
+Column 5  Width=19
+Column 6  Width=19
+Column 7  Width=19
+Column 8  Width=19
+Column 9  Width=19
+Column 10 Width=19
+Column 11 Width=19
+Column 12 Width=19
+Column 13 Width=19
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=328,832 Split=Y Selected=0x2E9237F7
     DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,444 Selected=0x2E9237F7
     DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,387 Selected=0xF4B38336
@@ -66318,12 +66385,12 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 S
     DockNode            ID=0x00000012 Parent=0x00000002 SizeRef=1575,829 Split=X
       DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,598 Split=X Selected=0xF6FF0623
+          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,647 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=945,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=717,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=551,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=768,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=500,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
-          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,233 Split=X Selected=0xBF096F38
+          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,184 Split=X Selected=0xBF096F38
             DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=948,192 Selected=0xBF096F38
             DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=320,192 Selected=0x2323D3E4
         DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
