--- a/imgui.ini
+++ b/imgui.ini
@@ -1,4 +1,5 @@
 [Window][DockSpaceWindow]
+Pos=0,0
 Size=1600,877
 Collapsed=0
 
@@ -66374,7 +66375,7 @@ Column 13 Width=19
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=328,832 Split=Y Selected=0x2E9237F7
     DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,444 Selected=0x2E9237F7
     DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,387 Selected=0xF4B38336
