--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,44
-Size=328,444
+Size=398,444
 Collapsed=0
 DockId=0x00000003,0
 
@@ -27,8 +27,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=330,44
-Size=939,640
+Pos=400,44
+Size=956,769
 Collapsed=0
 DockId=0x00000005,0
 
@@ -295,7 +295,7 @@ Collapsed=0
 
 [Window][Component Editor]
 Pos=0,490
-Size=328,387
+Size=398,387
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1280,686
-Size=320,191
+Pos=1316,815
+Size=284,62
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,8 +324,8 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
-Pos=345,44
-Size=945,639
+Pos=189,44
+Size=1062,598
 Collapsed=0
 DockId=0x00000005,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=330,686
-Size=948,191
+Pos=400,815
+Size=914,62
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65215,7 +65215,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,44
-Size=343,833
+Size=187,833
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,8 +65225,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1292,44
-Size=308,639
+Pos=1253,44
+Size=347,598
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65344,7 +65344,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1600,637
+Size=1217,596
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65385,8 +65385,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1271,44
-Size=329,640
+Pos=1358,44
+Size=242,769
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65412,8 +65412,8 @@ Collapsed=0
 DockId=0x00000013,1
 
 [Window][Console]
-Pos=330,686
-Size=948,191
+Pos=400,815
+Size=914,62
 Collapsed=0
 DockId=0x00000013,1
 
@@ -66373,27 +66373,35 @@ Column 11 Width=19
 Column 12 Width=19
 Column 13 Width=19
 
+[Table][0x9FEAFC9C,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xA44ABCB9,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=328,832 Split=Y Selected=0x2E9237F7
+  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=398,832 Split=Y Selected=0x2E9237F7
     DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,444 Selected=0x2E9237F7
     DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,387 Selected=0xF4B38336
-  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1270,832 Split=X
-    DockNode            ID=0x00000011 Parent=0x00000002 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
+  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1200,832 Split=X
+    DockNode            ID=0x00000011 Parent=0x00000002 SizeRef=187,829 Split=Y Selected=0x09C8B3D2
       DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
       DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-    DockNode            ID=0x00000012 Parent=0x00000002 SizeRef=1575,829 Split=X
+    DockNode            ID=0x00000012 Parent=0x00000002 SizeRef=1411,829 Split=X
       DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,640 Split=X Selected=0xF6FF0623
-            DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=945,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=939,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=329,639 Selected=0x2B33B8C9
-            DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
-          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,191 Split=X Selected=0xBF096F38
-            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=948,192 Selected=0xBF096F38
-            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=320,192 Selected=0x2323D3E4
+          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,769 Split=X Selected=0xF6FF0623
+            DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=956,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=242,639 Selected=0x2B33B8C9
+            DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
+          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,62 Split=X Selected=0xBF096F38
+            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=914,192 Selected=0xBF096F38
+            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=284,192 Selected=0x2323D3E4
         DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
