--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,44
-Size=398,444
+Size=319,540
 Collapsed=0
 DockId=0x00000003,0
 
@@ -27,8 +27,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=400,44
-Size=895,608
+Pos=321,44
+Size=1074,788
 Collapsed=0
 DockId=0x00000005,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,490
-Size=398,387
+Pos=0,586
+Size=319,471
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1316,654
-Size=284,223
+Pos=1560,834
+Size=360,223
 Collapsed=0
 DockId=0x00000014,0
 
@@ -325,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=189,44
-Size=1062,598
+Size=995,788
 Collapsed=0
 DockId=0x00000005,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=400,654
-Size=914,223
+Pos=321,834
+Size=1237,223
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65215,7 +65215,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,44
-Size=187,833
+Size=187,1013
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,8 +65225,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1253,44
-Size=347,598
+Pos=1573,44
+Size=347,788
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65344,7 +65344,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1217,596
+Size=1533,786
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65385,8 +65385,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1297,44
-Size=303,608
+Pos=1397,44
+Size=523,788
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65412,8 +65412,8 @@ Collapsed=0
 DockId=0x00000013,1
 
 [Window][Console]
-Pos=400,654
-Size=914,223
+Pos=321,834
+Size=1237,223
 Collapsed=0
 DockId=0x00000013,1
 
@@ -66381,13 +66381,17 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0x2DB7E5A4,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=398,832 Split=Y Selected=0x2E9237F7
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1920,1013 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=319,832 Split=Y Selected=0x2E9237F7
     DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,444 Selected=0x2E9237F7
     DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,387 Selected=0xF4B38336
-  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1200,832 Split=X
+  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1599,832 Split=X
     DockNode            ID=0x00000011 Parent=0x00000002 SizeRef=187,829 Split=Y Selected=0x09C8B3D2
       DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
       DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -66396,12 +66400,12 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 S
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,608 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=895,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=303,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1074,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=523,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
           DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,223 Split=X Selected=0xBF096F38
-            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=914,192 Selected=0xBF096F38
-            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=284,192 Selected=0x2323D3E4
+            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=1237,192 Selected=0xBF096F38
+            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=360,192 Selected=0x2323D3E4
         DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
