--- a/imgui.ini
+++ b/imgui.ini
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=339,44
-Size=1056,788
+Size=1352,781
 Collapsed=0
 DockId=0x00000005,0
 
@@ -49,7 +49,7 @@ Size=440,173
 Collapsed=0
 
 [Window][Parameters]
-Pos=60,60
+Pos=50,65
 Size=448,155
 Collapsed=0
 
@@ -223,7 +223,7 @@ Collapsed=0
 [Window][Dear ImGui Demo]
 Pos=765,120
 Size=549,680
-Collapsed=0
+Collapsed=1
 
 [Window][Dear ImGui ID Stack Tool]
 Pos=60,60
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1560,834
-Size=360,223
+Pos=1560,827
+Size=360,230
 Collapsed=0
 DockId=0x00000014,0
 
@@ -325,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=189,44
-Size=995,788
+Size=879,848
 Collapsed=0
 DockId=0x00000005,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=339,834
-Size=1219,223
+Pos=339,827
+Size=1219,230
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65226,7 +65226,7 @@ Collapsed=0
 
 [Window][UI Element Editor]
 Pos=1573,44
-Size=347,788
+Size=347,848
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65344,13 +65344,13 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1533,786
+Size=1417,846
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][##Welcome]
 Pos=0,46
-Size=1600,831
+Size=1920,1011
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65385,8 +65385,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1397,44
-Size=523,788
+Pos=1693,44
+Size=227,781
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65412,8 +65412,8 @@ Collapsed=0
 DockId=0x00000013,1
 
 [Window][Console]
-Pos=339,834
-Size=1219,223
+Pos=339,827
+Size=1219,230
 Collapsed=0
 DockId=0x00000013,1
 
@@ -66385,6 +66385,10 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0xB3E4F1A3,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1920,1013 Split=X Selected=0xBDDC88E0
@@ -66398,12 +66402,12 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1920,1013 
     DockNode            ID=0x00000012 Parent=0x00000002 SizeRef=1411,829 Split=X
       DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,608 Split=X Selected=0xF6FF0623
+          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,781 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1056,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=523,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1352,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=227,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
-          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,223 Split=X Selected=0xBF096F38
+          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,230 Split=X Selected=0xBF096F38
             DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=1219,192 Selected=0xBF096F38
             DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=360,192 Selected=0x2323D3E4
         DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
