--- a/imgui.ini
+++ b/imgui.ini
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=357,44
-Size=1039,781
+Size=1072,781
 Collapsed=0
 DockId=0x00000005,0
 
@@ -325,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=189,44
-Size=858,781
+Size=1382,781
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65344,7 +65344,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1396,779
+Size=1440,779
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65385,13 +65385,13 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1398,44
-Size=522,781
+Pos=1431,44
+Size=489,781
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][GridSet Editor]
-Pos=762,345
+Pos=761,345
 Size=250,299
 Collapsed=0
 
@@ -66405,6 +66405,18 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0x1FCF6620,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xD964AF54,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x2E93439E,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1920,1013 Split=X Selected=0xBDDC88E0
@@ -66420,8 +66432,8 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1920,1013 
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,781 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1039,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=522,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1072,639 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=489,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
           DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,230 Split=X Selected=0xBF096F38
             DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=1089,192 Selected=0xBF096F38
