--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,44
-Size=355,540
+Size=278,525
 Collapsed=0
 DockId=0x00000003,0
 
@@ -23,12 +23,12 @@ Collapsed=0
 
 [Window][Choose File##ChooseFile]
 Pos=606,162
-Size=925,482
+Size=885,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=357,44
-Size=1072,781
+Pos=280,44
+Size=1145,762
 Collapsed=0
 DockId=0x00000005,0
 
@@ -49,7 +49,7 @@ Size=440,173
 Collapsed=0
 
 [Window][Parameters]
-Pos=51,65
+Pos=60,71
 Size=448,155
 Collapsed=0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,586
-Size=355,471
+Pos=0,571
+Size=278,486
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1448,827
-Size=472,230
+Pos=1634,808
+Size=286,249
 Collapsed=0
 DockId=0x00000014,0
 
@@ -325,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=189,44
-Size=1382,781
+Size=938,763
 Collapsed=0
 DockId=0x00000005,0
 
@@ -338,13 +338,13 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=357,827
-Size=1089,230
+Pos=280,808
+Size=1352,249
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Create Entity with MeshComponent]
-Pos=381,258
+Pos=451,317
 Size=430,158
 Collapsed=0
 
@@ -65226,7 +65226,7 @@ Collapsed=0
 
 [Window][UI Element Editor]
 Pos=1573,44
-Size=347,781
+Size=347,763
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65344,7 +65344,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1440,779
+Size=1476,761
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65385,8 +65385,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1431,44
-Size=489,781
+Pos=1427,44
+Size=493,762
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65412,8 +65412,8 @@ Collapsed=0
 DockId=0x00000013,1
 
 [Window][Console]
-Pos=357,827
-Size=1089,230
+Pos=280,808
+Size=1352,249
 Collapsed=0
 DockId=0x00000013,1
 
@@ -66417,27 +66417,39 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0x99F54B9C,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x9C917F29,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x06252589,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1920,1013 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=355,832 Split=Y Selected=0x2E9237F7
-    DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,444 Selected=0x2E9237F7
-    DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,387 Selected=0xF4B38336
-  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1563,832 Split=X
+  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=278,832 Split=Y Selected=0x2E9237F7
+    DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,525 Selected=0x2E9237F7
+    DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,486 Selected=0xF4B38336
+  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1640,832 Split=X
     DockNode            ID=0x00000011 Parent=0x00000002 SizeRef=187,829 Split=Y Selected=0x09C8B3D2
       DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
       DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
     DockNode            ID=0x00000012 Parent=0x00000002 SizeRef=1411,829 Split=X
       DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,781 Split=X Selected=0xF6FF0623
+          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,762 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1072,639 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=489,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1145,639 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=493,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
-          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,230 Split=X Selected=0xBF096F38
-            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=1089,192 Selected=0xBF096F38
-            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=472,192 Selected=0x2323D3E4
+          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,249 Split=X Selected=0xBF096F38
+            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=1352,192 Selected=0xBF096F38
+            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=286,192 Selected=0x2323D3E4
         DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
