--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,44
-Size=278,432
+Size=354,432
 Collapsed=0
 DockId=0x00000003,0
 
@@ -27,8 +27,8 @@ Size=885,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=280,44
-Size=984,699
+Pos=356,44
+Size=752,588
 Collapsed=0
 DockId=0x00000005,0
 
@@ -295,7 +295,7 @@ Collapsed=0
 
 [Window][Component Editor]
 Pos=0,478
-Size=278,399
+Size=354,399
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1110,745
-Size=490,132
+Pos=1131,634
+Size=469,243
 Collapsed=0
 DockId=0x00000014,0
 
@@ -325,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=189,44
-Size=938,763
+Size=570,588
 Collapsed=0
 DockId=0x00000005,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=280,745
-Size=828,132
+Pos=356,634
+Size=773,243
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65215,7 +65215,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,44
-Size=187,1013
+Size=187,833
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,8 +65225,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1573,44
-Size=347,763
+Pos=1253,44
+Size=347,588
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65344,7 +65344,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1476,761
+Size=1108,586
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65385,8 +65385,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1266,44
-Size=334,699
+Pos=1110,44
+Size=490,588
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65412,8 +65412,8 @@ Collapsed=0
 DockId=0x00000013,1
 
 [Window][Console]
-Pos=280,745
-Size=828,132
+Pos=356,634
+Size=773,243
 Collapsed=0
 DockId=0x00000013,1
 
@@ -66429,27 +66429,31 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0xB7739CD2,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=278,832 Split=Y Selected=0x2E9237F7
+  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=354,832 Split=Y Selected=0x2E9237F7
     DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,525 Selected=0x2E9237F7
     DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,486 Selected=0xF4B38336
-  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1640,832 Split=X
+  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1244,832 Split=X
     DockNode            ID=0x00000011 Parent=0x00000002 SizeRef=187,829 Split=Y Selected=0x09C8B3D2
       DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
       DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
     DockNode            ID=0x00000012 Parent=0x00000002 SizeRef=1411,829 Split=X
       DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,699 Split=X Selected=0xF6FF0623
+          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,588 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=984,639 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=334,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=752,639 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=490,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
-          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,132 Split=X Selected=0xBF096F38
-            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=828,192 Selected=0xBF096F38
-            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=490,192 Selected=0x2323D3E4
+          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,243 Split=X Selected=0xBF096F38
+            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=773,192 Selected=0xBF096F38
+            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=469,192 Selected=0x2323D3E4
         DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
