--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,11 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Just the Docs
-description: A Jekyll theme for documentation
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://just-the-docs.com" # the base hostname & protocol for your site, e.g. http://example.com
-repository: just-the-docs/just-the-docs # for github-metadata
+
+title: YOUR TITLE
+description: YOUR DESCRIPTION
+theme: just-the-docs
+
+# the base hostname & protocol for your site, e.g. http://example.com
+url: https://jernesstar.github.io/VolcanicEngine
+# the subpath of your site, e.g. /blog
+baseurl: ""
+repository: Jernesstar/VolcanicEngine # for github-metadata
 
 permalink: pretty
 
