Update title and desc

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,8 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: YOUR TITLE
-description: YOUR DESCRIPTION
+title: VolcanicEngine
+description: The modern game engine
 theme: just-the-docs
 
 # the base hostname & protocol for your site, e.g. http://example.com
