progress: Updated README and favicon

--- a/imgui.ini
+++ b/imgui.ini
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=356,44
-Size=752,588
+Size=752,628
 Collapsed=0
 DockId=0x00000005,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1131,634
-Size=469,243
+Pos=1068,674
+Size=532,203
 Collapsed=0
 DockId=0x00000014,0
 
@@ -325,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=189,44
-Size=570,588
+Size=570,628
 Collapsed=0
 DockId=0x00000005,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=356,634
-Size=773,243
+Pos=189,674
+Size=877,203
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65226,7 +65226,7 @@ Collapsed=0
 
 [Window][UI Element Editor]
 Pos=1253,44
-Size=347,588
+Size=347,628
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65344,7 +65344,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1108,586
+Size=1108,626
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65385,8 +65385,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1110,44
-Size=490,588
+Pos=761,44
+Size=490,628
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65412,8 +65412,8 @@ Collapsed=0
 DockId=0x00000013,1
 
 [Window][Console]
-Pos=356,634
-Size=773,243
+Pos=189,674
+Size=877,203
 Collapsed=0
 DockId=0x00000013,1
 
@@ -66433,6 +66433,14 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0x972EB87F,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x45809A1B,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
@@ -66446,12 +66454,12 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 S
     DockNode            ID=0x00000012 Parent=0x00000002 SizeRef=1411,829 Split=X
       DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,588 Split=X Selected=0xF6FF0623
+          DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,628 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
               DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=752,639 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
               DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=490,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
-          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,243 Split=X Selected=0xBF096F38
+          DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,203 Split=X Selected=0xBF096F38
             DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=773,192 Selected=0xBF096F38
             DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=469,192 Selected=0x2323D3E4
         DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
