--- a/imgui.ini
+++ b/imgui.ini
@@ -22,13 +22,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=606,162
+Pos=450,174
 Size=885,482
 Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=356,44
-Size=752,628
+Size=970,628
 Collapsed=0
 DockId=0x00000005,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1068,674
-Size=532,203
+Pos=997,674
+Size=603,203
 Collapsed=0
 DockId=0x00000014,0
 
@@ -325,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=189,44
-Size=570,628
+Size=1062,628
 Collapsed=0
 DockId=0x00000005,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=189,674
-Size=877,203
+Pos=0,674
+Size=995,203
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65344,13 +65344,13 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1108,626
+Size=1326,626
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][##Welcome]
-Pos=0,46
-Size=1920,1011
+Pos=0,21
+Size=1600,856
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65385,8 +65385,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=761,44
-Size=490,628
+Pos=1328,46
+Size=272,626
 Collapsed=0
 DockId=0x00000006,0
 
@@ -65412,8 +65412,8 @@ Collapsed=0
 DockId=0x00000013,1
 
 [Window][Console]
-Pos=189,674
-Size=877,203
+Pos=0,674
+Size=995,203
 Collapsed=0
 DockId=0x00000013,1
 
@@ -66441,9 +66441,21 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0xAF153B16,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xFBE301FD,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x6201BB0C,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,69 Size=1600,831 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=354,832 Split=Y Selected=0x2E9237F7
     DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,525 Selected=0x2E9237F7
     DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,486 Selected=0xF4B38336
@@ -66456,11 +66468,11 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 S
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,628 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=752,639 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=490,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=970,639 CentralNode=1 HiddenTabBar=1 Selected=0xDCD3BA3B
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=272,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
           DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,203 Split=X Selected=0xBF096F38
-            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=773,192 Selected=0xBF096F38
+            DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=773,192 Selected=0x49278EEE
             DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=469,192 Selected=0x2323D3E4
         DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
