Update README, fix some project loading problems

--- a/TestProj/Editor/layout.ini
+++ b/TestProj/Editor/layout.ini
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=356,44
-Size=847,628
+Size=966,628
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65263,7 +65263,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,46
-Size=1407,626
+Size=1322,626
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65304,8 +65304,8 @@ Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=1205,44
-Size=395,628
+Pos=1324,44
+Size=276,628
 Collapsed=0
 DockId=0x00000006,0
 
@@ -66384,6 +66384,34 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0x1A015093,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xD607A6D0,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x9090E14B,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xEC727AA5,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x04EA602D,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x14D2D348,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xECE9A4C7,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=354,832 Split=Y Selected=0x2E9237F7
@@ -66398,8 +66426,8 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 S
         DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,628 Split=X Selected=0xF6FF0623
             DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1062,575 Split=X Selected=0xBDDC88E0
-              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=847,639 CentralNode=1 HiddenTabBar=1 Selected=0xDCD3BA3B
-              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=395,639 Selected=0x2B33B8C9
+              DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=966,639 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+              DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=276,639 Selected=0x2B33B8C9
             DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=347,575 Selected=0xFC56E895
           DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,203 Split=X Selected=0xBF096F38
             DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=773,192 Selected=0xBF096F38
