--- a/TestProj/Editor/layout.ini
+++ b/TestProj/Editor/layout.ini
@@ -66412,6 +66412,18 @@ Column 0  Sort=0v
 RefScale=15
 Column 0  Sort=0v
 
+[Table][0xAAC6A9CA,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0x02360320,4]
+RefScale=15
+Column 0  Sort=0v
+
+[Table][0xE56A46E4,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,67 Size=1600,833 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=354,832 Split=Y Selected=0x2E9237F7
