--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,4 @@
 [Window][DockSpaceWindow]
-Pos=0,0
 Size=1600,877
 Collapsed=0
 
@@ -66413,7 +66412,7 @@ RefScale=15
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,44 Size=1600,856 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Pos=0,44 Size=1600,856 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=354,832 Split=Y Selected=0x2E9237F7
     DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=218,525 Selected=0x2E9237F7
     DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=218,486 Selected=0xF4B38336
